@@ -1,6 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 2.1.0
 Date: 2024-10-21
+  Features:
+    - Auto Deconstruction of drills without resources. Toggleable with a global setting Defaulted to true.
   Changes:
     - Minor formatting changes to some files.
     - Drill removal instantly updates UI
